# gms-g3

./: .gitignore  DEMO.md  README.md  pyproject.toml
samples/: clean_example.py  medium_example.js  messy_example.py  smelly_example.c
src/: cli.py
src/core/: file_reader.py  lexer.py
src/metrics/: complexity.py  halstead.py  loc.py  maintainability.py  smells.py
src/report/: console.py  smells.py  summary.py
tests/: test_complexity.py  test_file_reader.py  test_halstead.py  test_integrated_report.py  test_loc.py  test_maintainability.py  test_smells.py
