[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-anomaly-detector"
version = "0.1.0"
description = "Herramienta de detección de anomalías en código fuente — Índice de Mantenibilidad"
requires-python = ">=3.11"
dependencies = [
    "pygments>=2.17",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
code-anomaly = "src.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
